<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
    <LinearLayout
            android:id="@+id/extras_layout"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">
        <TextView
                android:id="@+id/no_extra_update_server_configured"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_extra_update_server_configured"
                android:gravity="center_horizontal"
                android:layout_marginTop="10sp"
                style="@style/TextAppearance.Text"
                android:visibility="gone"/>
        <TextView
                android:id="@+id/available_extras_text"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_extras_text"
                android:gravity="center_horizontal"
                android:layout_marginTop="10sp"
                style="@style/TextAppearance.Text"/>
        <Spinner
                android:id="@+id/available_extras_list"
                android:layout_marginTop="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:prompt="@string/available_extras_text"/>
        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:id="@+id/stable_experimental_description_container_extras">
            <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:src="@drawable/stable"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/stable_description"
                    style="@style/TextAppearance.Text"
                    android:paddingTop="2px"
                    android:layout_marginLeft="5px"
                    android:layout_marginRight="20px"/>
            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/experimental"/>
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/experimental_description"
                    style="@style/TextAppearance.Text"
                    android:paddingTop="2px"
                    android:layout_marginLeft="5px"/>
        </LinearLayout>
        <Button
                android:id="@+id/download_extra_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_available_extra_text"
                android:layout_marginTop="20sp"
                style="@style/TextAppearance.Button"
                android:drawableLeft="@drawable/download"
                android:onClick="ListenerDownloadExtraButton"/>
        <Button
                android:id="@+id/extra_screenshots_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screenshot_button_extra_text"
                android:layout_marginTop="20sp"
                style="@style/TextAppearance.Button"
                android:drawableLeft="@drawable/button_gallery"
                android:onClick="ListenerScreenshotExtras"/>
        <Button
                android:id="@+id/show_extra_changelog_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/changelog_button_extra_text"
                android:layout_marginTop="20sp"
                style="@style/TextAppearance.Button"
                android:drawableLeft="@drawable/button_clog"
                android:onClick="ListenerExtraChangelogButton"/>
        <TextView
                android:id="@+id/check_now_update_chooser_text_extras"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_extras_found_instructions"
                android:gravity="center_horizontal"
                android:layout_marginTop="10sp"
                android:visibility="gone"
                style="@style/TextAppearance.Text"/>
        <Button
                android:id="@+id/check_now_button_update_chooser_extras"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_now_button_text"
                android:layout_marginTop="20sp"
                android:visibility="gone"
                style="@style/TextAppearance.Button"
                android:drawableLeft="@drawable/check_now"
                android:onClick="checkForUpdates"/>
        <TextView
                android:id="@+id/last_extra_update_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:layout_marginRight="10px"
                android:layout_gravity="bottom|right"/>
        <TextView
                android:id="@+id/experimental_extra_updates_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:layout_marginRight="10px"
                android:layout_gravity="bottom|right"/>
        <TextView
                android:id="@+id/show_extra_downgrades_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10px"
                android:layout_marginRight="10px"
                android:layout_gravity="bottom|right"/>
    </LinearLayout>
</ScrollView>